# data-engineering-on-gcp

pim /01-introduction-to-data-engineering/: dogs.json  extract.py  load.sh  pyproject.toml
pim /04-building-data-pipelines-with-apache-airflow-cloud-composer/mnt/dags/: aerobic-ward-410501-51bb0361ca0a.json  breakfast_product_pipeline.py  breakfast_stores_pipeline.py  breakfast_transaction_pipeline.py  dog_api.pipeline.py  dogs.json  my_first_dag.py  my_second_dag.py
pim /my-project/: pyproject.toml
pim /proj-product-Lung-Cancer-prediction/: pyproject.toml
pim /proj-product-Lung-Cancer-prediction/airflow/: Dockerfile
pim /proj-product-Lung-Cancer-prediction/airflow/mnt/dags/: Lung_Cancer_Dataset.csv  lung-cancer-load-to-gcs-8e2f0af6fe47.json  lung_cancer_from_mysql_to_bigquery_pipeline.py  lung_cancer_predictor_modeling.py  main.py  pim-titanic-load-gcs-to-bigquery-b6e08f465048.json  pyproject.toml  titanic_survivor_predictor_modeling.py
pim /proj-product-Lung-Cancer-prediction/airflow/mnt/logs/scheduler/: latest
pim /proj-product-titanic-survivor-prediction/: db.conf  import.py
pim /proj-product-titanic-survivor-prediction/airflow/mnt/dags/: titanic_from_mysql_to_bigquery_pipeline.py
pim /proj-product-titanic-survivor-prediction/airflow/mnt/logs/scheduler/: latest
pim /proj-sales-prediction/: main.py  pipeline.conf  pyproject.toml
