[tool.poetry]
name = "proj-sales-prediction"
version = "0.1.0"
description = ""
authors = ["zfifaz <107416724+zfifaz@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.25"
pymysql = "^1.1.0"
pandas = "^2.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
